--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,4 +1,5 @@
 <div class="auth-page">
+  ===={{isSubmitting$ |async}}=====
   <div class="container page">
     <div class="row">
       <div class="col-md-6 offset-md-3 col-xs-12">
@@ -29,7 +30,7 @@
                      formControlName="password"
                      placeholder="Password"/>
             </fieldset>
-            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+            <button [disabled]="isSubmitting$ | async" class="btn btn-lg btn-primary pull-xs-right" type="submit">
               Sign Up
             </button>
           </fieldset>
