--- a/src/app/shared/modules/topBar/components/topBar/topBar.component.html
+++ b/src/app/shared/modules/topBar/components/topBar/topBar.component.html
@@ -19,9 +19,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/profiles', (currentUser$ | async).username]" class="nav-link">
-            <img class="user-pic" alt="pic" [src]="(currentUser$ | async).image ">
-            &nbsp; {{ (currentUser$ | async).username}}
+          <a
+            [routerLink]="['/profiles', (currentUser$ | async).username]"
+            class="nav-link"
+          >
+            <img class="user-pic" [src]="(currentUser$ | async).image"/>
+            &nbsp; &nbsp; {{ (currentUser$ | async).username}}
           </a>
         </li>
       </ng-container>
