--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="isLoading$ | async">Loading...</div>
-<div *ngIf="error$ | async">Error happened</div>
-
+<app-loading *ngIf="isLoading$ | async"></app-loading>
+<app-errorMessage *ngIf="error$ | async"></app-errorMessage>
 <div *ngIf="feed$ |async">
   <div class="article-preview" *ngFor="let article of (feed$ | async)?.articles">
     <div class="article-meta">
@@ -20,11 +19,14 @@
     <a [routerLink]="['/articles',article.slug]" class="preview-link">
       <h1>
         {{article.title}}
-
       </h1>
       <p>{{article.description}}</p>
       HERE IS LIST OF TAGS
     </a>
   </div>
-  PAGINATION
+  <app-pagination
+    [total]="(feed$ | async)?.acticlesCount"
+    [limit]="limit"
+    [url]="baseUrl"
+    [currentPage]="currentPage"></app-pagination>
 </div>
