--- a/src/app/global/components/globalFeed/globalFeed.component.html
+++ b/src/app/global/components/globalFeed/globalFeed.component.html
@@ -7,7 +7,7 @@
         <app-feed [apiUrl]="apiUrl"></app-feed>
       </div>
       <div class="col-md-3">
-        POPULAR TAGS
+        <app-popular-tags></app-popular-tags>
       </div>
     </div>
   </div>
