--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -21,7 +21,8 @@
         {{article.title}}
       </h1>
       <p>{{article.description}}</p>
-      HERE IS LIST OF TAGS
+      <app-tag-list [tags]="article.tagList">
+      </app-tag-list>
     </a>
   </div>
   <app-pagination
