--- a/src/app/shared/modules/popularTags/components/popularTags/popularTags.component.html
+++ b/src/app/shared/modules/popularTags/components/popularTags/popularTags.component.html
@@ -3,7 +3,7 @@
 <div class="sidebar" *ngIf="popularTags$ | async">
   <p>Popular Tags</p>
   <div class="tag-list">
-    <a *ngFor="let tag of popularTags$ | async" [routerLink]="['/tags',popularTags$] " class="tag-default tag-pill">
+    <a *ngFor="let tag of popularTags$ | async" [routerLink]="['/tags',tag] " class="tag-default tag-pill">
       {{tag}}
     </a>
   </div>
