--- a/src/app/shared/modules/feedToggler/components/feedToggler/feedToggler.component.html
+++ b/src/app/shared/modules/feedToggler/components/feedToggler/feedToggler.component.html
@@ -6,12 +6,13 @@
       </a>
     </li>
     <li class="nav-item">
-      <a [routerLink]="['/']" routerLinkActive="active" class="nav-link">
+      <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link">
         Global Feed
       </a>
     </li>
     <li class="nav-item" *ngIf="tagNameProps">
       <a [routerLink]="['/tags',tagNameProps]" routerLinkActive="active" class="nav-link">
+        <i class="ion-pound"></i>
         {{tagNameProps}}
       </a>
     </li>
