made post deleting

--- a/src/app/article/components/feed/article.component.html
+++ b/src/app/article/components/feed/article.component.html
@@ -19,7 +19,7 @@
             <i class="ion-edit"></i>
             Edit
           </a>
-          DELETE BUTTON
+          <button class="btn btn-outline-danger btn-sm" (click)="deleteArticle()"></button>
         </span>
       </div>
     </div>
