--- a/src/app/createArticle/components/createArticle/createArticle.component.html
+++ b/src/app/createArticle/components/createArticle/createArticle.component.html
@@ -1,2 +1,2 @@
 CREATE <br>
-<app-article-form></app-article-form>
+<app-article-form [initialValues]="initialValues" [isSubmitting]="false" (articleSubmit)="onSubmit($event)"></app-article-form>
